Java: JimFs: upgrade version